--- a/sass/tags.scss
+++ b/sass/tags.scss
@@ -68,8 +68,8 @@ body {
   color: $text;
   background: url('../imgs/chain_link_fence_v2.jpg') repeat fixed center;
   background-color: lighten($accent1,8%);
-
-  @include tabmini {
+  overflow-y: hidden;
+  @include tablet {
     overflow-x: hidden;
     overflow-y: auto;
     padding-bottom: 0px;
